The us section will not have a fixed background color as it will change depending on where you are in the us section. The us-first will have a justify-content center and a gap of 5vw. The background color is just to help with the styling.

--- a/styles.css
+++ b/styles.css
@@ -287,14 +287,15 @@ header:hover {
     justify-content: center;
     align-items: center;
     width: 100%;
-    background-color: rgba(25, 25, 25);
 }
 
 .us-first {
     display: flex;
+    justify-content: center;
+    gap: 5vw;
     width: 100%;
     height: 50vh;
-    gap: 5vw;
+    background-color: rgb(0, 0, 0);
 }
 
 .us-first-img {
